--- a/pos/templates/pos/dashboard.html
+++ b/pos/templates/pos/dashboard.html
@@ -20,7 +20,7 @@
 
         <!-- Card 3 -->
         <div class="bg-white p-6 rounded-xl shadow-sm border border-brand-200">
-            <h3 class="text-sm font-semibold text-gray-500 uppercase">Total Historico</h3>
+            <h3 class="text-sm font-semibold text-gray-500 uppercase">Total Mes</h3>
             <p class="text-3xl font-bold text-brand-400">${{ total_sales|intcomma }}</p>
         </div>
     </div>
